tests/externInfo/dhrystone-exported/db/invalid/path/strcmp_x.c.loc
68.8.0.4905 68.8.1.4905 68.26.0.4923 68.31.0.4929 68.37.0.4935 69.16.0.4941 71.8.0.4965 